crates/tui/snapshots/inline/network/network_diagnostics_current_language_chinese_inline.snap
---
source: crates/tui/src/app/network_tests.rs
expression: screen
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘


─ 配置 › 网络 ──────────────────────────────────────────────────────────────────────────────────────

> 重新运行诊断
  复制所需域名

  Example ────────────────────────────────────────────────────────────────────────────────────────
  模型服务: api.example.test:443
  代理：proxy.example.test:8080
  HTTP 可达 · 状态码 401
  用量服务: usage.example.test:443
  直连
  DNS 解析失败
  账号用量：账号用量查询失败
  检查 HTTP 连通性和账号用量。
  不测试模型生成及流式响应。

  Enter 确认  ·  Esc 返回  ·  r 刷新
