crates/tui/snapshots/inline/network/network_diagnostics_retry_chinese_inline.snap
---
source: crates/tui/src/app/network_tests.rs
expression: screen
---

    ▄  ▄     Ash Code v0.1.0
  ▗█▛██▜█▖   Automatic model
  ▝▜████▛▘   .
    ▝  ▘













─ 配置 › 网络 ──────────────────────────────────────────────────────────────────────────────────────

> 重新运行诊断
  无法运行网络诊断，请在此页重试。

  Enter 确认  ·  Esc 返回  ·  r 刷新
